<resources>
    <string name="app_name">My Expenditure Tracker</string>

    <string name="username">Username</string>
    <string name="email">Email/Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!-- Message -->
    <string name="logoutMessage">Are you sure ? Logging out will clear login session? Clicking on <b>Clear All Record</b> will delete your past as well as current data.</string>
    <string name="bottom_text">Already have an account ?</string>

    <!-- Error Message -->
    <string name="error_field_required">Field should not be empty</string>
    <string name="error_invalid_email">Invalid Email Address</string>
    <string name="error_invalid_password">Password too short</string>

    <!-- OnBoard Screen. -->
    <string name="ob_header1">SIMPLE ABROAD CALLS</string>
    <string name="ob_header2">FREE WONEP TO WONEP</string>
    <string name="ob_header3">NO HIDDEN CHARGES OR FEES</string>

    <string name="ob_get_started">GET STARTED</string>

    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>

</resources>
